# vla_6g_tvt

./: .gitignore  CMakeLists.txt  CONTINUE_NOTES.md  MATH_INFORMED_RL_PLAN.md  README.md  monitor_training.sh  package.xml
airsim_demo/: Dockerfile  README.md  STATE_RECOVERY.md  deploy_vastai.sh  docker-compose.yml  entrypoint.sh  mi_rl_demo_recorder.py  settings.json  supervisord.conf
config/: gz_bridge.yaml  vla_3d_demo.rviz  vla_6g.rviz  vla_6g_params.yaml
deployment/: Dockerfile  README.md  deploy_vastai.sh  requirements.txt
docker/: Dockerfile.mirl  deploy_vastai.sh
docs/: mathematical_formulation_v3.md  mathematical_formulation_v3.tex
launch/: collect_data.launch.py  gazebo_demo.launch.py  rviz_3d_demo.launch.py  vla_6g_system.launch.py  vla_ego_integrated.launch.py
matlab/: sgac_training.m
msg/: ChannelState.msg  RelayMetrics.msg  UserState.msg  VLACommand.msg
paper/: cover_letter_tvt.tex  cover_letter_tvt_v15.tex  mirl_iot_journal.tex  mirl_wcl.tex  vla_6g_ieee_tvt_v14.tex  vla_6g_ieee_tvt_v15.tex  vla_6g_ieee_tvt_v16.tex
results/: deepsets_attention_20260213_220537.json  deepsets_baseline_20260213_194317.json  drl_baseline_20260213_153943.json  evaluation_20260213_100703.json  final_comparison_20260718_143455.json  latency_benchmark_20260213_160738.json  mlp_2k_baseline_20260213_182549.json  mlp_baseline_20260213_153032.json  mlp_obstacle_baseline_20260718_140835.json  mlp_obstacle_rich_fair_20260718_143249.json  mobility_evaluation_20260213_172912.json  mobility_hybrid_20260214_080419.json  obstacle_scenario_comparison_20260718_141452.json  sac_500k_baseline_20260213_195714.json  sac_baseline_20260213_184337.json  statistical_analysis.json  td3_baseline_20260213_184824.json
results_baselines_vastai/: baseline_results.json  ddpg_history.json  ppo_history.json  sac_history.json  td3_history.json
scripts/: algorithm_comparison.py  benchmark_latency.py  channel_optimizer.py  compute_stats.py  eval_common.py  eval_final_comparison.py  eval_obstacle_scenarios.py  evaluate_mobility.py  evaluate_mobility_hybrid.py  evaluate_system.py  gazebo_demo_node.py  generate_paper_figures.py  generate_publication_figures.py  plot_results.py  plot_results_v2.py  run_mirl_simulation.py  run_vla_td3_only.py  rviz_3d_demo.py  simulation_demo.py  (+9 more)
(+77 files in other folders)
